--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #000000;
+  background-color: #2C043A;
   color: white;
   display: flex;
   justify-content: center;
@@ -16,31 +16,31 @@
   margin: 20px 0px 0px 0px;
 }
 
-.headerList {
+/* .headerList {
   display: flex;
   gap: 40px;
   margin-bottom: 50px;
-}
+} */
 
-.headerListItem {
+/* .headerListItem {
   display: flex;
   align-items: center;
   gap: 10px;
-}
+} */
 
-.headerListItem.active {
+/* .headerListItem.active {
   border: 1px solid white;
   padding: 10px;
   border-radius: 20px;
-}
+} */
 
 .headerDesc {
   margin: 20px 0px;
 }
 
 .headerBtn {
-  background-color: #000000;
-  color: white;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
   font-weight: 500;
   border: none;
   padding: 10px;
@@ -49,9 +49,9 @@
 }
 
 .headerSearch {
-  height: 4rem;
+  height: 2rem;
   background-color: white;
-  border: 3px solid #febb02;
+  border: 3px solid #000000;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -64,7 +64,7 @@
 }
 
 .headerIcon {
-  color: lightgray;
+  color: rgb(54, 54, 54);
 }
 
 .headerSearchItem {
@@ -79,7 +79,7 @@
 }
 
 .headerSearchText {
-  color: lightgray;
+  color: rgb(168, 168, 168);
   cursor: pointer;
 }
 
@@ -94,7 +94,7 @@
   position: absolute;
   top: 50px;
   background-color: white;
-  color: gray;
+  color: rgb(129, 129, 129);
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
@@ -112,14 +112,14 @@
   align-items: center;
   gap: 10px;
   font-size: 12px;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 .optionCounterButton {
   width: 30px;
   height: 30px;
-  border: 1px solid #0071c2;
-  color: #0071c2;
+  border: 1px solid #00a13e;
+  color: #00a13e;
   cursor: pointer;
   background-color: white;
 }
