--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -8,12 +8,12 @@
 .navContainer{
   width: 100%;
   max-width: 1024px;
-  color: white;
+  color: rgb(0, 0, 0);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
+  
 .logo{
   font-weight: 500;
 }
