--- a/client/src/components/mailList/mailList.css
+++ b/client/src/components/mailList/mailList.css
@@ -1,7 +1,8 @@
 .mail{
-  width: 100%;
+  position: relative;
+  width: 100vw;
   margin-top: 50px;
-  background-color: #000000;
+  background-color: #2C043A;
   color: white;
   display: flex;
   flex-direction: column;
