--- a/client/src/components/searchItem/searchItem.css
+++ b/client/src/components/searchItem/searchItem.css
@@ -23,7 +23,7 @@
 
 .siTitle {
   font-size: 20px;
-  color: #0071c2;
+  color: #2C043A;
 }
 
 .siDistance {
@@ -99,7 +99,7 @@
 }
 
 .siCheckButton{
-  background-color: #0071c2;
+  background-color: #2C043A;
   color: white;
   font-weight: bold;
   padding: 10px 5px;
