--- a/client/src/pages/user/hotel/hotel.css
+++ b/client/src/pages/user/hotel/hotel.css
@@ -20,7 +20,7 @@
   right: 0;
   border: none;
   padding: 10px 20px;
-  background-color: #000000;
+  background-color: #2C043A;
   color: white;
   font-weight: bold;
   border-radius: 5px;
@@ -102,7 +102,7 @@
 .hotelDetailsPrice > button {
   border: none;
   padding: 10px 20px;
-  background-color: #000000;
+  background-color: #2C043A;
   color: white;
   font-weight: bold;
   cursor: pointer;
