--- a/client/src/pages/user/signup/signup.css
+++ b/client/src/pages/user/signup/signup.css
@@ -1,4 +1,15 @@
-.carded{
+.rContainer {
+  position: absolute;
+  border-radius: 5px;
+  right: 750px;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  background-color: #2C043A;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;    
+  margin-top: 20rem;
+  height: 350px;
+  width: 500px;
+
 }
