--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -39,7 +39,7 @@
 }
 
 .headerBtn {
-  background-color: #ffffff;
+  background-color: #d3d3d3;
   color: rgb(0, 0, 0);
   font-weight: 500;
   border: none;
