--- a/client/src/pages/user/login/login.css
+++ b/client/src/pages/user/login/login.css
@@ -8,23 +8,27 @@
 
 .lContainer {
     position: absolute;
-    border-radius: 5px;
+    border-radius: 15px;
     right: 750px;
     display: flex;
     justify-content: center;
-    background-color: #f1f1f1;
+    background-color: #2C043A;
     flex-direction: column;
     gap: 1rem;
     align-items: center;    
     margin-top: 20rem;
-    height: 350px;
-    width: 500px;
+    height: 450px;
+    width: 400px;
 
 }
 
 .lContainer:lInput{
     display: flex;
     flex-direction: column;
+}
+
+.rTitle {
+    color: #fff;
 }
 
 .lInput {
@@ -35,7 +39,7 @@
 .lButton {
     border: none;
     padding: 10px;
-    background-color: #2C043A;
+    background-color: #00ac1d;
     color: white;
     font-weight: bold;
     cursor: pointer;
@@ -45,4 +49,17 @@
 .lButton:disabled {
     background-color: #2C043A;
     cursor: not-allowed;
+}
+
+.rLine {
+    width: 350px;
+}
+
+.rLinkTo{
+    text-decoration: none;
+    color: #fff;
+}
+
+.fError {
+    color: red;
 }
